# xrbDS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
engine/components/: component.cpp  mesh_filter.cpp
engine/core/: component_manager.cpp  component_manager.h  engine.cpp  main_loop.h  object.h
engine/graphics/: renderer.cpp  renderer.h
engine/input/: input.cpp
engine/resources/: mesh.cpp  resource.cpp  texture.cpp
engine/scene/: node.cpp
engine/scene/3d/: mesh_instance_3d.cpp  node_3d.cpp
engine/utils/: file.cpp
include/tinyobjloader/: tiny_obj_loader.h
include/xrbds/components/: component.h  mesh_filter.cpp  mesh_filter.h  transform.h
include/xrbds/core/: engine.h  types.h
include/xrbds/input/: input.h
include/xrbds/resources/: mesh.h  resource.h  texture.h
include/xrbds/scene/: node.h
include/xrbds/scene/3d/: mesh_instance_3d.h  node_3d.h
include/xrbds/utils/: file.h
samples/hello_world/: CMakeLists.txt  hello_world.cpp  main.cpp
samples/hello_world/assets/meshes/mococo/: ATTRIBUTION.txt  mococo.mtl
source/: main.cpp
tools/: create_solution.sh
